--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,user-scalable=yes,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
+    <meta name="viewport"
+        content="width=device-width,user-scalable=yes,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="./css/swiper-3.4.2.min.css">
@@ -24,7 +25,7 @@
             computedRem()
             window.addEventListener('resize', computedRem)
         }(window)
-}
+
     </script>
 </head>
 
