--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             });
         }
 
-        $('document').on('touchstart touchmove touchend', (ev) => {
+        $(document).on('touchstart touchmove touchend', (ev) => {
             ev.preventDefault();
         });
 
