--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
             });
         }
 
-        $(document).on('touchstart touchmove touchend', (ev) => {
-            ev.preventDefault();
-        });
+      
 
     </script>
 </head>
@@ -88,51 +86,64 @@
                 <li class="self">
                     <i class="arrow"></i>
                     <img src="img/zf_messageStudent.png" alt="" class="pic">
-
-                    面试官你好，我叫杨国玉， 2012年毕业
-                    2012年毕业2012年毕业2012年毕业2012年毕业
+                    面试官您好，我叫杨国玉，来自于北京，2012年毕业于XXX院校，学习的是XXX专业，到目前为止工作3年
                 </li>
                 <li class="inter">
                     <i class="arrow"></i>
                     <img src="img/zf_messageLogo.png" alt="" class="pic">
-                    好的,介绍一下自己的专业技能吧。
+                    哇塞！好牛X啊！介绍一下自己的专业技能吧！
                 </li>
+                <!--后期会手动在这个位置增加一条新的记录-->
                 <li class="self">
                     <i class="arrow"></i>
                     <img src="img/zf_messageStudent.png" alt="" class="pic">
-
-                    熟悉ES6,promise
+                    本人擅长：原生JS、ES6、Promise等设计模式、组件和插件封装，看过JQ源码，可以开发各种Hybrid混合APP...
                 </li>
                 <li class="inter">
                     <i class="arrow"></i>
                     <img src="img/zf_messageLogo.png" alt="" class="pic">
-                    框架会吗，我们公司现在使用的是React和Vue
+                    框架会吗？我们公司现在使用的是VUE和REACT
                 </li>
                 <li class="self">
                     <i class="arrow"></i>
                     <img src="img/zf_messageStudent.png" alt="" class="pic">
-
-                    自己手写过webpack
+                    之前的公司使用的是REACT开发，个人对于REACT渲染原理、MVC模式、SPA单页面应用、DIFF差异渲染机制以及REDUX原理等都有研究，掌握的很熟练，对于VUE之前也做过，如果公司需要可以快速入手
+                </li>
+                <li class="inter">
+                    <i class="arrow"></i>
+                    <img src="img/zf_messageLogo.png" alt="" class="pic">
+                    webpack会吗？
                 </li>
                 <li class="self">
                     <i class="arrow"></i>
                     <img src="img/zf_messageStudent.png" alt="" class="pic">
-
-                    自己手写过webpack
+                    之前项目都是基于脚手架完成的，自己偶尔去修改一些webpack配置项
                 </li>
                 <li class="self">
                     <i class="arrow"></i>
                     <img src="img/zf_messageStudent.png" alt="" class="pic">
-
-                    自己手写过webpack
+                    不过目前正在深入研究，可以搭建简单的脚手架
                 </li>
                 <li class="self">
                     <i class="arrow"></i>
                     <img src="img/zf_messageStudent.png" alt="" class="pic">
-
-                    自己手写过webpack
+                    同时对于NODE/EXPRESS等后台开发也有所涉猎，只是没有应用到项目实战中，目前也正在研究，对这个比较感兴趣
                 </li>
-
+                <li class="inter">
+                    <i class="arrow"></i>
+                    <img src="img/zf_messageLogo.png" alt="" class="pic">
+                    你认为你的优点在于哪？和其他人对比，公司为啥要录用你！
+                </li>
+                <li class="self">
+                    <i class="arrow"></i>
+                    <img src="img/zf_messageStudent.png" alt="" class="pic">
+                    肯吃苦、肯加班、能力高、要钱少...这些够吗?
+                </li>
+                <li class="inter">
+                    <i class="arrow"></i>
+                    <img src="img/zf_messageLogo.png" alt="" class="pic">
+                    就是你啦，明天来上班！
+                </li>
             </ul>
             <div class="keyBoard">
                 <span></span>
@@ -163,48 +174,41 @@
                             <dt>课程大纲</dt>
                             <dd>
                                 <em>01</em>
-                                <a href="#">HTML(5)+CSS(3)+移动端响应式布局开发及相关插件的使用</a>
+                                <a href="#">姓名:杨国玉</a>
                             </dd>
                             <dd>
                                 <em>02</em>
-                                <a href="#">JS中的闭包及堆栈内存以及THIS的处理</a>
+                                <a href="#">性别:男</a>
                             </dd>
                             <dd>
                                 <em>03</em>
-                                <a href="#">JS中的面向对象编程，可以基于面向对象封装组件和插件等</a>
+                                <a href="#">年龄:25</a>
                             </dd>
                             <dd>
                                 <em>04</em>
-                                <a href="#">ES6中的新特性及数组对象里面的常用方法</a>
+                                <a href="#">毕业院校:北京广播电视大学</a>
                             </dd>
                             <dd>
                                 <em>05</em>
-                                <a href="#">JS中的同步异步编程及Promise设计模式</a>
+                                <a href="#">学历:大专</a>
                             </dd>
                             <dd>
                                 <em>06</em>
-                                <a href="#">JS中的事件委托及事件池及发布订阅设计模式</a>
+                                <a href="#">工作经验:3年</a>
                             </dd>
                             <dd>
                                 <em>07</em>
-                                <a href="#">JS中的DOM操作以及重绘和回流的优化</a>
+                                <a href="#">户籍:北京</a>
                             </dd>
                             <dd>
                                 <em>08</em>
-                                <a href="#">HTTP交互及AJAX库的封装以及跨域数据共享</a>
+                                <a href="#">邮箱:516433517@qq.com</a>
                             </dd>
                             <dd>
                                 <em>09</em>
-                                <a href="#">VUE:VUE-CLI/VUE-ROUTER/VUEX/VUE ELEMENT等全家桶</a>
+                                <a href="#">电话:15210252369</a>
                             </dd>
-                            <dd>
-                                <em>10</em>
-                                <a href="#">REACT:REACT-ROUTER/REACT-REDUX/DVA/AXIOS/ANT等</a>
-                            </dd>
-                            <dd>
-                                <em>11</em>
-                                <a href="#">辅助技能：NODE/WEBPACK/GIT等</a>
-                            </dd>
+                           
                         </dl>
                     </div>
 
