--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             });
         }
 
-      
+
 
     </script>
 </head>
@@ -55,7 +55,7 @@
         <!-- loading -->
         <section class="loadingBox" style='display:none'>
             <div class="title">
-                <h1>珠峰培训</h1>
+                <h1>个人简历</h1>
                 <h2>H5场景交互简历</h2>
             </div>
             <div class="progress">
@@ -65,7 +65,7 @@
         <!-- phone -->
         <section class="phoneBox" style='display:none'>
             <h2>
-                <img src="img/zf_phoneLogo.png" alt="">
+                <a style='font-size: 1rem'>Resume</a>
                 <span>00:00</span>
             </h2>
             <div class="answer">
@@ -208,7 +208,7 @@
                                 <em>09</em>
                                 <a href="#">电话:15210252369</a>
                             </dd>
-                           
+
                         </dl>
                     </div>
 
